<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <EditText
        android:id="@+id/registroEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario_correo" />

    <EditText
        android:id="@+id/registroPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/registroEmail"
        app:layout_constraintTop_toBottomOf="@+id/registroEmail" />

    <Button
        android:id="@+id/botonConfirmarRegistro"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/pill"
        android:text="@string/confirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registroPassword" />

    <Button
        android:id="@+id/botonCancelarRegistro"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/pill"
        android:text="@string/cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonConfirmarRegistro" />

    <TextView
        android:id="@+id/usuario_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/registrar"
        app:layout_constraintStart_toStartOf="@+id/registroEmail"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>