<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/confirmarEditarComentario"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/confirmar"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextComentario"
        app:layout_constraintTop_toBottomOf="@+id/editTextComentario" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/comentario"
        app:layout_constraintStart_toStartOf="@+id/textoFecha"
        app:layout_constraintTop_toBottomOf="@+id/textoFecha" />

    <EditText
        android:id="@+id/editTextComentario"
        android:layout_width="370dp"
        android:layout_height="175dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/receta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textoReceta"
        android:layout_width="370dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fecha"
        app:layout_constraintStart_toStartOf="@+id/textoReceta"
        app:layout_constraintTop_toBottomOf="@+id/textoReceta" />

    <TextView
        android:id="@+id/textoFecha"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="370dp"
        android:layout_height="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/editComentario"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>