<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".Fragments.Main.Fragment_Login">

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/loginEmail"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

    <Button
        android:id="@+id/botonIngresar"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/pill"
        android:text="@string/ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    <Button
        android:id="@+id/botonRegistrar"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/pill"
        android:text="@string/registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonIngresar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>